<resources>
    <string name="app_name">Raudect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title">Raudect</string>
    <string name="nav_header_desc">A Fraud Detection Interface between user and machine learning</string>

    <!--TODO: this is for fragment_input.xml-->
    <string name="inputFragment_textView_title_string">Check Card Information</string>
    <string name="inputFragment_inputLayout_cardNumber_string">Card Number</string>
    <string name="inputFragment_button_submit_string">Check</string>
    <!--end-->

    <!--Todo: this is for fragment_register.xml-->
    <string name="registerFragment_textView_title_string">Card Registration</string>
    <string name="registerFragment_inputLayout_dateOfBirth_string">Birth(dd/mm/yyyy)</string>
    <string name="registerFragment_inputLayout_job_string">Job</string>
    <string name="registerFragment_inputLayout_address_string">Your Address</string>
    <string name="registerFragment_inputLayout_cityPopulation_string">Population in Your City</string>
    <string name="registerFragment_button_submit_string">Register</string>
    <!--end-->

    <!--TODO: this is for fragment_input_transaction.xml-->
    <string name="inputTransactionFragment_textView_title_string">Transaction</string>
    <string name="inputTransactionFragment_inputLayout_transactionTime_string">Date(dd/mm/yyyy)</string>
    <string name="inputTransactionFragment_inputLayout_transactionCategory_string">Category</string>
    <string name="inputTransactionFragment_inputLayout_transactionAmount_string">Amount($USD)</string>
    <string name="inputTransactionFragment_inputLayout_transactionLatitude_string">Latitude</string>
    <string name="inputTransactionFragment_inputLayout_transactionLongitude_string">Longitude</string>
    <string name="inputTransactionFragment_inputLayout_transactionMerchants_string">Merchants/Staffs</string>
    <string name="inputTransactionFragment_button_submit_string">Submit</string>
    <!-- end -->

    <!--TODO: this is for fragment_input.xml-->
    <string name="listFragment_textView_title_string">TRANSACTION LIST</string>
    <!--end-->

    <!--TODO: this is for fragment_detail.xml-->
    <string name="detailFragment_textView_title_string">PERSONAL INFO</string>
    <string name="detailFragment_textView_cardNumber_string">Card Number: </string>
    <string name="detailFragment_textView_dateOfBirth_string">Date of Birth: </string>
    <string name="detailFragment_textView_job_string">Job: </string>
    <string name="detailFragment_textView_address_string">Address: </string>
    <string name="detailFragment_textView_cityPopulation_string">City Population: </string>

    <string name="detailFragment_textView_transactionTitle_string">TRANSACTION INFO</string>
    <string name="detailFragment_textView_transactionTime_string">Date: </string>
    <string name="detailFragment_textView_transactionCategory_string">Category: </string>
    <string name="detailFragment_textView_transactionAmount_string">Amount($USD): </string>
    <string name="detailFragment_textView_transactionLatitude_string">Latitude: </string>
    <string name="detailFragment_textView_transactionLongitude_string">Longitude: </string>
    <string name="detailFragment_textView_transactionMerchants_string">Merchants/Staffs: </string>
    <!--end-->


    <!--TODO: this is for fragment_editor.xml-->
    <string name="editorFragment_textView_title_string">EDIT DATA</string>
    <string name="editorFragment_button_submit_string">APPLY</string>
    <!--borrowed a lot from fragment_input.xml-->
    <!--end-->


    <!--TODO: this is for fragment_about.xml-->
    <string name="aboutFragment_textView_titleWhat_string">WHAT IS RAUDECT?</string>
    <string name="aboutFragment_textView_whatIsRaudect_string">Raudect is an application that predicts whether or not a transaction were made by it\'s legitimate owner or by a fraudster who have stolen the card owner\'s credential.</string>
    <!--end-->


    <!--TODO: this is for fragment_about_us.xml-->
    <string name="aboutUsFragment_textView_titleWho_string">WHO ARE WE?</string>
    <string name="aboutUsFragment_textView_whoAreWe_string">We are a group of informatics undergraduate who that has been assigned a project as our final exam, where we need to create an application that implements things that we\'ve learnt. Additionally, we are also assigned to create a Machine Learning Model from another lecture and implementing the model into our mobile application as well.</string>
    <!--end-->


    <!--TODO: this is for fragment_profile.xml-->
    <string name="profileFragment_imageView_pictureDesc_string">Profile Picture</string>
    <string name="profileFragment_textView_title_string">Edit Profile</string>
    <string name="profileFragment_textView_editPicture_string">Picture: </string>
    <string name="profileFragment_textView_editUsername_string">Username: </string>
    <string name="profileFragment_textEdit_editUsername_string">ex:John Doe</string>
    <string name="profileFragment_textView_greeting_string">Hello, %s!</string>
    <string name="profileFragment_button_editPicture_string">Take Photo</string>
    <string name="profileFragment_button_delete_string">DELETE</string>
    <!--end-->


    <!--TODO: this is for list_element.xml-->
    <string name="list_suspicious_string">SUSPICIOUS</string>
    <!--end-->


    <!--TODO: this is for Tabbed Navigation IndividualAdapter.kt-->
    <string name="individualAdapter_tab_detailFragment_string">Detail</string>
    <string name="individualAdapter_tab_editorFragment_string">Editor</string>
    <!--end-->

    <!--TODO: this is for Drawer Navigation-->
    <string name="drawer_importFragment_string">Import CSV</string>
    <string name="drawer_profileFragment_string">Profile</string>
    <string name="drawer_aboutFragment_string">About App</string>
    <string name="drawer_aboutUsFragment_string">About Us</string>
    <!--end-->

    <!--TODO: this is for Bottom Navigation-->
    <string name="bottom_listFragment_string">List</string>
    <string name="bottom_inputFragment_string">Add</string>
    <!--end-->

    <!--TODO: this is for Bottom Navigation-->
    <string name="welcome_signIn_string">Welcome</string>
    <string name="button_signIn_string">Sign In Through Google</string>
    <!--end-->
</resources>